refactor: change project code organization
